# report_cli

./: .gitignore  README.md  pyproject.toml
src/report_cli/: __init__.py  app.py  cli.py  csv_reader.py  errors.py  models.py  output.py
src/report_cli/reports/: base.py  clickbait.py  registry.py
tests/: test_cli.py  test_clickbait_report.py  test_csv_reader.py  test_models.py  test_output.py  test_registry.py
