[project]
name = "report-cli"
version = "0.1.0"
description = "CLI tool for generating reports from CSV files"
requires-python = ">=3.12"
dependencies = [
    "tabulate==0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
